5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1596_2894.log
== TEST (2019-03-21 18:11:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))

# Calculo do valor a ser pago, incluindo o frete:
total = 8

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:11:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))

# Calculo do valor a ser pago, incluindo o frete:
total = 8

# Impressao do valor total:
print(var + total)
-- EXECUTION TIME:
0.165341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:12:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))

# Calculo do valor a ser pago, incluindo o frete:
total = 45

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:12:19) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))

# Calculo do valor a ser pago, incluindo o frete:
total = 45

# Impressao do valor total:
print(var + total)
-- EXECUTION TIME:
0.195515
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:12:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:12:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:12:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + var

# Impressao do valor total:
print(var + total)
-- EXECUTION TIME:
0.225972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:12:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:13:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int((input("Qual o valor unitario do jogo? ")))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int((input()))
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:14:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = (input("Qual o valor unitario do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + 

# Impressao do valor total:
print(var + total)
-- ERROR:
File "XXXX", line 8
    total = frete + 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:14:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = (input("Qual o valor unitario do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = frete + var
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:14:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(ut("Qual o valor unitario do jogo? ")))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- ERROR:
File "XXXX", line 5
    var = int(ut("Qual o valor unitario do jogo? ")))
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:15:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor unitario do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:16:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:16:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor unitario do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:16:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor unitario do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = (rete + var)

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:17:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor unitario do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:17:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor unitario do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- EXECUTION TIME:
0.162396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:19:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- OUTPUT:
47.459999999999994
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:19:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- EXECUTION TIME:
0.141891
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
47.459999999999994
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
757.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
248019.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:19:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = frete + var

# Impressao do valor total:
print(var + total)
-- OUTPUT:
47.459999999999994
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:20:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:20:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.221891
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
53
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
53
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:20:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:21:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total, var)
-- OUTPUT:
53 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:21:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total + var)
-- OUTPUT:
54.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:21:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(var)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:21:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(var)
print(total)
-- OUTPUT:
1.23
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:22:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(var)
print(total)
-- EXECUTION TIME:
0.129072
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
1.23
53
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
356.0
53
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
123987.0
53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:22:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(var)

-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:23:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total)


-- OUTPUT:
53.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:23:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.152785
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
53.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
53.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
53.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:23:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8.0
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total)


-- OUTPUT:
53.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:23:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogos = 8.0
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogos + frete

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.153787
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
53.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
53.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
53.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- OUTPUT:
53.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogo = 34
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- OUTPUT:
79.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:26:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogo = 34
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.158182
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
79.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
79.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:27:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogo = 34
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogo = 34.0
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- OUTPUT:
79.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:28:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor do jogo? "))
jogo = 34.0
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.196856
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
79.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
79.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:35:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor do jogo? "))
jogo = 34.0
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:35:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor do jogo? "))
jogo = 34.0
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:35:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor do jogo? "))
jogo = 34.0
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.131613
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:35:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor do jogo? "))
jogo = 34
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:35:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = int(input("Qual o valor do jogo? "))
jogo = 34
frete = 45.0
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.151202
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:20) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:40:26) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- EXECUTION TIME:
0.177931
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:41:36) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

total = frete + jogo

print(var+total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = frete + jogo
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:42:09) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

jogo = 8

total = frete + jogo

print(var+total)

-- OUTPUT:
54.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:42:14) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

jogo = 8

total = frete + jogo

print(var+total)

-- EXECUTION TIME:
0.232781
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
409.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124040.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:43:22) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:43:30) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- EXECUTION TIME:
0.19902
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:43:38) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:43:46) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- EXECUTION TIME:
0.174124
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:43:58) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:44:09) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- EXECUTION TIME:
0.13282
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:44:11) 
-- CODE:
var = float(input("Qual o valor do jogo? "))

frete = 45

print(var+frete)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:46:51) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 100
frete = 45

print(jogo+frete)

-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:46:58) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 100
frete = 45

print(jogo+frete)

-- EXECUTION TIME:
0.204388
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
145
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
145
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
145
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:46:59) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 100
frete = 45

print(jogo+frete)

-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:47:08) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 100
frete = 45

print(jogo+frete, var)

-- OUTPUT:
145 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:48:14) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45

print(var+jogo+frete)

-- OUTPUT:
54.230000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:48:19) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45

print(var+jogo+frete)

-- EXECUTION TIME:
0.229297
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.230000000000004
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
409.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124040.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:48:21) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45

print(var+jogo+frete)

-- OUTPUT:
54.230000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:49:39) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45

print(var+jogo+frete)

-- EXECUTION TIME:
0.186267
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.230000000000004
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
409.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124040.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:50:27) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45
total = jogo + frete

print(var+total)

-- OUTPUT:
54.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:50:34) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45
total = jogo + frete

print(var+total)

-- EXECUTION TIME:
0.161764
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
409.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124040.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:50:36) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45
total = jogo + frete

print(var+total)

-- OUTPUT:
54.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:28) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 100
frete = 45
total = jogo + frete

print(var+total)

-- OUTPUT:
146.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:51:33) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 100
frete = 45
total = jogo + frete

print(var+total)

-- EXECUTION TIME:
0.211964
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
146.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
501.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124132.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:52:50) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = n
frete = 45
total = jogo * n + frete

print(var+total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    jogo = n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:08) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45
total = jogo * n + frete

print(var+total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = jogo * n + frete
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:22) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45
total = (jogo * n + frete)

print(var+total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (jogo * n + frete)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:47) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45
total = (jogo + n * frete)

print(var+total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (jogo + n * frete)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:32) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
total = jogos + frete

print(var+total)

-- OUTPUT:
54.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:54:37) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
total = jogos + frete

print(var+total)

-- EXECUTION TIME:
0.187652
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
409.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124040.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:55:34) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
total = jogos + frete

print(var+total*8)

-- OUTPUT:
425.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:55:38) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
total = jogos + frete

print(var+total*8)

-- EXECUTION TIME:
0.209639
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
425.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
780.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124411.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:38) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45
total = jogo + frete

print((var+total)*8)

-- OUTPUT:
433.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:56:44) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogo = 8
frete = 45
total = jogo + frete

print((var+total)*8)

-- EXECUTION TIME:
0.168414
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
433.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3272.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
992320.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:56:51) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
frete = 45
total = jogo + frete

print((var+total)*8)

-- EXECUTION TIME:
0.195247
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 3, in <module>
    total = jogo + frete
NameError: name 'jogo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:52) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
frete = 45
total = jogo + frete

print((var+total)*8)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = jogo + frete
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:57:22) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
frete = 45
jogo = 65
total = jogo + frete

print((var+total)*8)

-- OUTPUT:
889.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:57:26) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
frete = 45
jogo = 65
total = jogo + frete

print((var+total)*8)

-- EXECUTION TIME:
0.159738
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
889.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3728.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
992776.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:57:55) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
frete = 45

print((var+frete)*8)

-- OUTPUT:
369.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:57:59) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
frete = 45

print((var+frete)*8)

-- EXECUTION TIME:
0.141644
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
369.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3208.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
992256.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:58:27) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
print((var+frete)*8)

-- OUTPUT:
369.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:58:32) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
print((var+frete)*8)

-- OUTPUT:
369.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:58:39) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
print((var+frete)*8)

-- EXECUTION TIME:
0.164931
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
369.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3208.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
992256.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:59:19) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
print(8*var + frete)

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:59:22) 
-- CODE:
var = float(input("Qual o valor do jogo? "))
jogos = 8
frete = 45
print(8*var + frete)

-- EXECUTION TIME:
0.144474
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
